[package]
name = "imqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.10.0", default-features = false, features = ["macros"]}
rumqttc = "0.10.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
